--- a/index.html
+++ b/index.html
@@ -1,73 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <link href="styles.css" rel="stylesheet" />
-    <h1>Rahul's Component Library</h1>
-    <hr>
-    <h2>@typography</h2>
-    <h1>This is H1 tag.</h1>
-    <h2>This is h2 tag.</h2>
-    <h3>This is h3 tag</h3>
-    <H4>This is h4 tag.</H4>
-    <h5>This is h5 tag.</h5>
-    <h6>This is h6 tag.</h6>
 
-    <p>This is a Paragraph.</p>
-    <small> This is a small tag</small>
+    <link href="styles.css" rel="stylesheet">
 
-    <hr>
-
-    <h2>@containers</h2>
-    <h3>Fluid Container</h3>
-    <div class="container">This is a fluid container and it will go till the end of the page.</div>
-    <h3>Center container</h3>
-    <div class="container container-center">This is a center container and it will go till the specified width.</div>
-
-    <hr>
-    <h2>@links</h2>
-    <a class="link link-primary" href="/">Primary Button</a>
-    <a class="link link-secondary" href="/">Secondary Button</a>
-
-    <hr>
-    <h2>@List</h2>
-
-    <ul class="list-non-bullet">
-        <li>Eggs</li>
-        <li>Milk</li>
-        <li>Breads</li>
-    </ul>
-    <h3>Inline Unordered list</h3>
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Inline Item One</li>
-        <li class="list-item-inline">Inline Item two</li>
-        <li class="list-item-inline">Inline Item three</li>
-    </ul>
-    <h4>For this to work you need to know CSS</h4>
-    <h3>Ordered list</h3>
-    <ol>
-        <li>Eggs</li>
-        <li>Milk</li>
-        <li>Breads</li>
-    </ol>
-    <h3>Reverse Order List</h3>
-    <ol reversed>
-        <li>Eggs</li>
-        <li>Milk</li>
-        <li>Breads</li>
-    </ol>
-
-    <hr>
-    <p>for CONTAINER we use DIV tags</P>
-    <P>for SECTION we use SECTION tags</P>
-    <h2>@navbar</h2>
+    <!-- navbar -->
     <nav class="navigation container">
         <div class="nav-brand">iAmACoder</div>
         <ul class="list-non-bullet nav-pills">
@@ -75,53 +18,60 @@
                 <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link " href="/">Products</a>
+                <a class="link " href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link " href="/">About</a>
+                <a class="link " href="/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
-    <hr>
-    <h2>@header</h2>
+
+    <!-- header -->
+
     <header class="header">
-        <img class="header-img" src="images/header_image.svg" />
+        <img class="header-img" src="/images/header_image.svg" />
         <h1 class="header-heading">Adarsh Balak <span class="heading-inverted">the web developer</span></h1>
     </header>
 
-    <hr>
-    <h2>@Section</h2>
+    <!-- section -->
+
+    <section class="section off-white">
+        <div class="container-center">
+            <h1>technologies</h1>
+            <p>I am familiar with HTML,CSS, Javascript,Repl.it,WebHosting</p>
+        </div>
+    </section>
+
     <section class="section">
         <div class="container-center">
-            <h1>White Section</h1>
-            <p>This will have a white Background</p>
+            <h1>projects</h1>
+            <p>I like to showcase my work and thus you can see my projects hosted online</p>
+            <a class="link link-primary" href="/">See Projects</a>
         </div>
-        
     </section>
 
     <section class="section off-white">
         <div class="container-center">
-            <h1>Off White Section</h1>
-            <p>This will have a gray Background</p>
+            <h1>blogs</h1>
+            <p> I am also working on some technical and non-technical blogs. I like documenting my journey of learning</p>
+            <a class="link link-primary" href="/">See Blogs</a>
         </div>
-        
     </section>
-    <hr>
-    <h2>@footer</h2>
+
+    <!-- footer -->
     <footer class="footer">
-        <div >Some small Heading inside footer</div>
+        <div class="footer-header">Social Media Presence</div>
         <ul class="list-non-bullet">
             <li class="list-item-inline ">
-                <a class="link" href="/">Google</a>
+                <a class="link" href="https://github.com/r854">Github</a>
             </li>
             <li class="list-item-inline ">
-                <a class="link" href="/">Facebook</a>
+                <a class="link" href="https://www.facebook.com/Ra99956">Facebook</a>
             </li>
             <li class="list-item-inline ">
-                <a class="link" href="/">Twitter</a>
+                <a class="link" href="https://www.instagram.com/ra_hu_l_122/">Instagram</a>
             </li>
         </ul>
     </footer>
 </body>
-
 </html>
