--- a/projects.html
+++ b/projects.html
@@ -42,11 +42,11 @@
                 <strong>
                     <h1>do you know me?</h1>
                 </strong>
-                <small>March,2021</small>
-                <p> A CLI app built with <strong>Node JS</strong>.</span></p>
+                <small>August,2021</small>
+                <p> A CLI app built using Javascript <strong>Node JS</strong>.</span></p>
 
-                <a href=" " class="link link-primary">Play Game</a>
-                <a href=" " class="link link-secondary">View source</a>
+                <a href="https://replit.com/@Rahulayan/ex-13-improvization#index.js?embed=1&output=1" class="link link-primary">Play Game</a>
+                <a href="https://replit.com/@Rahulayan/ex-13-improvization#index.js" class="link link-secondary">View source</a>
             </div>
 
         </li>
@@ -54,13 +54,13 @@
         <li>
             <div class="container container-center">
                 <strong>
-                    <h1>do you know me?</h1>
+                    <h1>Translator</h1>
                 </strong>
-                <small>March,2021</small>
-                <p> A CLI app built with <strong>Node JS</strong>.</span></p>
+                <small>August,2021</small>
+                <p> A GUI app built with using <strong>Javascript</strong>.</span></p>
 
-                <a href=" " class="link link-primary">Play Game</a>
-                <a href=" " class="link link-secondary">View source</a>
+                <a href="" class="link link-primary">Play Game</a>
+                <a href="" class="link link-secondary">View source</a>
             </div>
         </li>
     </ul>
