--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <header class="header">
         <img class="header-img" src="/images/header_image.svg" />
-        <h1 class="header-heading">Adarsh Balak <span class="heading-inverted">the web developer</span></h1>
+        <h1 class="header-heading">Rahul Das <span class="heading-inverted"> A front-end web developer</span></h1>
     </header>
 
     <!-- section -->
@@ -46,7 +46,7 @@
         <div class="container-center">
             <h1>projects</h1>
             <p>I like to showcase my work and thus you can see my projects hosted online</p>
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
         </div>
     </section>
 
@@ -54,7 +54,7 @@
         <div class="container-center">
             <h1>blogs</h1>
             <p> I am also working on some technical and non-technical blogs. I like documenting my journey of learning</p>
-            <a class="link link-primary" href="/">See Blogs</a>
+            <a class="link link-primary" href="/blogs.html">See Blogs</a>
         </div>
     </section>
 
@@ -68,9 +68,7 @@
             <li class="list-item-inline ">
                 <a class="link" href="https://www.facebook.com/Ra99956">Facebook</a>
             </li>
-            <li class="list-item-inline ">
-                <a class="link" href="https://www.instagram.com/ra_hu_l_122/">Instagram</a>
-            </li>
+            
         </ul>
     </footer>
 </body>
