--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <li>
             <div class="container container-center">
                 <strong>
-                    <h1>Translator</h1>
+                    <h1>Minion Translator</h1>
                 </strong>
                 <small>August,2021</small>
                 <p> A GUI app built with using <strong>Javascript</strong>.</span></p>
@@ -62,6 +62,20 @@
                 <a href="" class="link link-primary">Play Game</a>
                 <a href="" class="link link-secondary">View source</a>
             </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
+                <strong>
+                    <h1>Emoji Interpretor</h1>
+                </strong>
+                <small>August,2021</small>
+                <p> A GUI app built using <strong>React.js</strong>.</span></p>
+
+                <a href="/" class="link link-primary">Play Game</a>
+                <a href="/" class="link link-secondary">View source</a>
+            </div>
+
         </li>
     </ul>
 </body>
